# WARDuino

./: .gitignore  CMakeLists.txt  README.md  benchmark_results.csv  benchmark_results_20250720_222606.csv  create_build_dirs.sh  diff.patch  generate_all_makefiles.sh  results_matrix.csv  results_sum.csv  results_timing.csv  run_all.sh  run_all_benchmarks.sh  run_multi.sh  sum_results.sh  time_chart.py
benchmarks/tasks/: Makefile  benchmark_times.csv  fac.wasm  time.csv  time.sh
benchmarks/tasks/bm-cheri/: gcd.wasm  primes.wasm  time.sh
benchmarks/tasks/bm-wasm/: fac.wasm  fib.wasm  tak.wasm  time.csv  time.py  time.sh
benchmarks/tasks/catalan/wast/: a.out  catalan.wasm  impl.c  out.wasm
benchmarks/tasks/fac/wast/: impl.c
benchmarks/tasks/fib/wast/: impl.c
benchmarks/tasks/gcd/wast/: impl.c
benchmarks/tasks/primes/wast/: impl.c
benchmarks/tasks/richards/wast/: exit_vm.h  impl.c  impl.c~  myalloc.c  myalloc.h
benchmarks/tasks/salloc/wasi/: #salloc.c#  salloc.c  salloc.wasm
benchmarks/tasks/salloc/wast/: impl.c
benchmarks/tasks/tak-mem/wast/: impl.c
benchmarks/tasks/tak/wast/: impl.c
benchmarks/tasks/wasm-cheri/: salloc.wasm
benchmarks/tasks/wasm-cheri/data/: time-execution.csv
benchmarks/tasks/wasm-cheri/scripts/: run.sh  time-execution.sh  time-plot.py
benchmarks/tasks/wasm-linux/script/: opcode-cate.py  opcode-graph.py  opcode-profile.sh  opcode-total.py  run.sh
src/Debug/: debugger.cpp
src/Interpreter/: instructions.cpp  interpreter.cpp
src/Memory/: mem.cpp
src/Primitives/: arduino.cpp  emulated.cpp  primitives.h  types.cpp  zephyr.cpp
src/WARDuino/: WARDuino.cpp
